# REDflare-v2

./: .gitignore  README.md  pyproject.toml
examples/: scope.example.json
redflare/: __init__.py  cli.py  interactive.py  profiles.py  ui.py  visualize.py
redflare/core/: correlation.py  models.py  runner.py  scope.py  standards.py  storage.py  surface_graph.py
redflare/modules/: __init__.py  adapters.py  base.py  browser.py  exposure.py  headers.py  http.py  mapping.py  network.py  noauth.py  passive.py  paths.py  repository.py  surface.py  tls.py  vulnerabilities.py
redflare/web/: __init__.py  app.js  index.html  styles.css
tests/: test_adapters.py  test_cli.py  test_exposure.py  test_integration.py  test_mapping.py  test_native_modules.py  test_network.py  test_scope.py  test_standards.py  test_storage.py  test_surface.py  test_surface_graph.py  test_tls.py  test_ui.py  test_visualize.py  test_vulnerabilities.py
