[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "redflare-v2"
version = "2.2.0"
description = "Scope-first web assessment framework with a shared attack-surface graph"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "ek0ms savi0r"}]

[project.scripts]
redflare = "redflare.cli:main"
redflare-v2 = "redflare.cli:main"

[tool.setuptools.packages.find]
include = ["redflare*"]

[tool.setuptools.package-data]
"redflare.web" = ["*.html", "*.js", "*.css"]
